2022-09-27T16:29:15Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3137307702
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 185 350 / 207 384
* notice: next accum: outdated-unq outdated-all / unq all: 187 352 / 208 386
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-09-13] / [2022-09-27]

2022-09-27T08:30:10Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3134094646
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 185 350 / 207 384
* notice: next accum: outdated-unq outdated-all / unq all: 185 350 / 207 384
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-13 2022-09-27]

2022-09-27T01:49:59Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3132376429
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 184 347 / 207 381
* notice: next accum: outdated-unq outdated-all / unq all: 185 350 / 207 384
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-09-12] / [2022-09-26]

2022-09-26T16:26:01Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3129397001
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 184 347 / 207 382
* notice: next accum: outdated-unq outdated-all / unq all: 184 347 / 207 381
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
* notice: removed / changed dates: [] / [2022-09-12]

2022-09-26T08:24:26Z: