@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-27T16:29:15Z",
+  "timestamp" : "2022-09-28T01:49:37Z",
   "count_outdated" : 352,
   "uniques_outdated" : 187,
-  "count" : 386,
+  "count" : 387,
   "uniques" : 208,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-27T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
