@@ -1,3 +1,11 @@
+2022-09-28T01:49:37Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3140255958
+* notice: last 14d: unq all: 2 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 187 352 / 208 386
+* notice: next accum: outdated-unq outdated-all / unq all: 187 352 / 208 387
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-09-27]
+
 2022-09-27T16:29:15Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3137307702
 * notice: last 14d: unq all: 2 34
